# sqlalchemy_tutorial

./: README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 1bccd8f8c094_added_user_surname.py  76b6bbb0d99f_database_creation.py
sqlalchemy_practice/: config.py  models.py  pyproject.toml
