[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["kirillkaz <kirillkazazaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
sqlalchemy-utils = "^0.41.1"
poetry-plugin-dotenv = "^0.5.3"
python-dotenv = "^1.0.0"
postgres = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
